--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,6 +1,6 @@
 name: shelf_body_parser
-description: Shelf 的中间件 用于解析get,post 参数及文件
-version: 1.0.7
+description: Shelf middleware is used to parse get, post parameters and files
+version: 1.0.8
 homepage: https://github.com/928799934/shelf_body_parser
 author: lijian <928799934@qq.com>
 
